--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This is a CRUD AUTH MERN Model or Boilerplate",
   "main": "template.js",
   "scripts": {
+    "development": "nodemon",
+    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+    "start": "NODE_ENV=production node ./dist/server.generated.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
