--- a/package.json
+++ b/package.json
@@ -27,8 +27,15 @@
     "@babel/plugin-transform-runtime": "^7.25.4",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
+    "mongodb": "^6.8.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-hot-middleware": "^2.26.1",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
