--- a/package.json
+++ b/package.json
@@ -39,7 +39,13 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "glob": "^11.0.0",
+    "helmet": "^7.1.0",
     "nodemon": "^3.1.4"
   }
 }
