--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.19.2",
     "glob": "^11.0.0",
     "helmet": "^7.1.0",
+    "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
   }
 }
