--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "glob": "^11.0.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
