--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
     "start": "set NODE_ENV=production node ./dist/server.generated.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
     "mongodb": "^6.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
